--- a/home.html
+++ b/home.html
@@ -10,11 +10,13 @@
   </head>
   <body>
     <div id="homeHeader" class="container">
-      <button id="b">BAĞÇA ƏLAVƏ ET</button>
-      <img src="images/logo.png"></img>
+      <button id="b"><span class="glyphicon glyphicon-user"></span>  BAĞÇA ƏLAVƏ ET</button>
+      <img src="images/logo.png" id="img1"></img>
       <h4>lorem ejhbfge rhkebg eghebg devrgnbrgeh hjrgfybs dfnvjd jbsdjfs jnsdfdvdgfvw ejfne ejrnfjen jernf </h4>
       <button id="a"> BAĞÇA TAP</button>
+      <img src="images/syml.png" id="img2"></img>
     </div>
+    <div class="container" id="son"></div>
     <div>
       <form id="homeForm" class="container">
         <h1>Sizə ən yaxın və ən uyğun bağçanı tapın</h1>
@@ -58,37 +60,37 @@
              <div class="slide"><img src="images/bagca.jpg">
                 <div id="a">
                    <h3>64 Nömrəli bağça</h3>
-                   <p>Nizami</p>
+                   <h4><span class="glyphicon glyphicon-map-marker"></span>  Nizami</h4>
                 </div>
               </div>
               <div class="slide"><img src="images/bagca.jpg">
                 <div id="a">
                    <h3>64 Nömrəli bağça</h3>
-                   <p>Nizami</p>
+                   <h4><span class="glyphicon glyphicon-map-marker"></span>  Nizami</h4>
                 </div>
               </div>
               <div class="slide"><img src="images/bagca.jpg">
                 <div id="a">
                    <h3>64 Nömrəli bağça</h3>
-                   <p>Nizami</p>
+                   <h4><span class="glyphicon glyphicon-map-marker"></span>  Nizami</h4>
                 </div>
               </div>
               <div class="slide"><img src="images/bagca.jpg">
                 <div id="a">
                    <h3>64 Nömrəli bağça</h3>
-                   <p>Nizami</p>
+                   <h4><span class="glyphicon glyphicon-map-marker"></span>  Nizami</h4>
                 </div>
               </div>
               <div class="slide"><img src="images/bagca.jpg">
                 <div id="a">
                    <h3>64 Nömrəli bağça</h3>
-                   <p>Nizami</p>
+                  <h4><span class="glyphicon glyphicon-map-marker"></span>  Nizami</h4>
                 </div>
               </div>
               <div class="slide"><img src="images/bagca.jpg">
                 <div id="a">
                    <h3>64 Nömrəli bağça</h3>
-                   <p>Nizami</p>
+                   <h4><span class="glyphicon glyphicon-map-marker"></span>  Nizami</h4>
                 </div>
               </div>
               
