--- a/map.html
+++ b/map.html
@@ -37,31 +37,31 @@
         <div class="row" id="mapInfo">
              <img src="images/gny.jpg"></img>
              <h4>baxca 64 nomreli</h4>
-             <h4>Xetai</h4>
+             <h4><span class="glyphicon glyphicon-map-marker"></span>  Xetai</h4>
              <a>etrafli melumat</a>
         </div>
         <div class="row" id="mapInfo">
              <img src="images/gny.jpg"></img>
              <h4>baxca 64 nomreli</h4>
-             <h4>Xetai</h4>
+             <h4><span class="glyphicon glyphicon-map-marker"></span>  Xetai</h4>
              <a>etrafli melumat</a>
         </div>
         <div class="row" id="mapInfo">
              <img src="images/gny.jpg"></img>
              <h4>baxca 64 nomreli</h4>
-             <h4>Xetai</h4>
+             <h4><span class="glyphicon glyphicon-map-marker"></span>  Xetai</h4>
              <a>etrafli melumat</a>
         </div>
         <div class="row" id="mapInfo">
              <img src="images/gny.jpg"></img>
              <h4>baxca 64 nomreli</h4>
-             <h4>Xetai</h4>
+             <h4><span class="glyphicon glyphicon-map-marker"></span>  Xetai</h4>
              <a>etrafli melumat</a>
         </div>
         <div class="row" id="mapInfo">
              <img src="images/gny.jpg"></img>
              <h4>baxca 64 nomreli</h4>
-             <h4>Xetai</h4>
+             <h4><span class="glyphicon glyphicon-map-marker"></span>  Xetai</h4>
              <a>etrafli melumat</a>
         </div>
       </div>
